@@ -3,6 +3,7 @@ package pe.unmsm.crm.marketing.campanas.mailing.infra.client;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.stereotype.Component;
 import org.springframework.web.client.RestClient;
@@ -10,18 +11,23 @@ import org.springframework.web.client.RestClientException;
 import pe.unmsm.crm.marketing.campanas.mailing.domain.port.output.ISegmentoPort;
 import pe.unmsm.crm.marketing.shared.infra.exception.ExternalServiceException;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
 /**
  * Adapter para obtener información de segmentos.
  * 
- * ESTRATEGIA:
- * 1. Llama a /api/v1/internal/segmentos/{id}/miembros para obtener IDs de leads
- * 2. Con esos IDs, consulta la tabla leads para obtener los emails
+ * OPTIMIZACIONES APLICADAS:
  * 
- * Si la API no está disponible, usa consulta directa a BD como fallback.
+ * 1. CACHÉ de emails del segmento (10 minutos)
+ *    - Los segmentos no cambian frecuentemente
+ *    - Evita consultas repetidas a la BD durante preparación de campañas
+ * 
+ * 2. CACHÉ de conteo de miembros (10 minutos)
+ *    - Útil para preview de destinatarios
+ * 
+ * 3. Fallback a BD si la API no está disponible
+ *    - Resilencia ante fallos del servicio de segmentación
  */
 @Component
 @RequiredArgsConstructor
@@ -36,15 +42,18 @@ public class SegmentoAdapter implements ISegmentoPort {
 
     /**
      * Obtiene los emails de los miembros de un segmento.
+     * Resultado cacheado por 10 minutos.
      * 
      * FLUJO:
-     * 1. Llama al endpoint /miembros para obtener List<Long> (IDs de leads)
-     * 2. Con esos IDs, consulta la BD para obtener los emails
+     * 1. Intenta obtener IDs vía API de segmentación
+     * 2. Consulta emails en BD local
+     * 3. Si falla API, usa fallback con JOIN directo
      */
     @Override
+    @Cacheable(value = "mailing_segmento_emails", key = "#idSegmento", unless = "#result.isEmpty()")
     public List<String> obtenerEmailsSegmento(Long idSegmento) {
         log.info("╔══════════════════════════════════════════════════╗");
-        log.info("║  OBTENIENDO EMAILS DEL SEGMENTO: {}              ", idSegmento);
+        log.info("║  OBTENIENDO EMAILS DEL SEGMENTO: {} (sin caché) ", idSegmento);
         log.info("╚══════════════════════════════════════════════════╝");
         
         try {
@@ -52,11 +61,11 @@ public class SegmentoAdapter implements ISegmentoPort {
             List<Long> idsLeads = obtenerIdsMiembrosPorApi(idSegmento);
             
             if (idsLeads == null || idsLeads.isEmpty()) {
-                log.warn("  El segmento {} no tiene miembros", idSegmento);
+                log.warn("  ⚠ El segmento {} no tiene miembros", idSegmento);
                 return List.of();
             }
             
-            log.info("  Obtenidos {} IDs de miembros", idsLeads.size());
+            log.info("  📋 Obtenidos {} IDs de miembros", idsLeads.size());
             
             // Paso 2: Obtener emails de esos leads
             List<String> emails = obtenerEmailsPorIds(idsLeads);
@@ -65,14 +74,48 @@ public class SegmentoAdapter implements ISegmentoPort {
             return emails;
             
         } catch (Exception e) {
-            log.warn("  API no disponible, usando consulta directa: {}", e.getMessage());
+            log.warn("  ⚠ API no disponible, usando fallback: {}", e.getMessage());
             return obtenerEmailsPorBD(idSegmento);
         }
     }
 
     /**
+     * Cuenta los miembros de un segmento.
+     * Resultado cacheado por 10 minutos.
+     */
+    @Override
+    @Cacheable(value = "mailing_segmento_count", key = "#idSegmento")
+    public Integer contarMiembros(Long idSegmento) {
+        log.debug("Contando miembros del segmento {} (sin caché)", idSegmento);
+        
+        try {
+            // Intentar por API (endpoint resumen)
+            String url = segmentacionUrl + "/api/v1/internal/segmentos/" + idSegmento + "/resumen";
+            
+            @SuppressWarnings("unchecked")
+            var response = restClient.get()
+                    .uri(url)
+                    .retrieve()
+                    .body(java.util.Map.class);
+            
+            if (response != null && response.containsKey("cantidadMiembros")) {
+                return (Integer) response.get("cantidadMiembros");
+            }
+            
+        } catch (Exception e) {
+            log.debug("  API de resumen no disponible, contando por BD");
+        }
+        
+        // Fallback: contar por BD
+        return contarMiembrosPorBD(idSegmento);
+    }
+
+    // ========================================================================
+    // MÉTODOS PRIVADOS
+    // ========================================================================
+
+    /**
      * Llama al endpoint /api/v1/internal/segmentos/{id}/miembros
-     * Retorna List<Long> con los IDs de los leads
      */
     private List<Long> obtenerIdsMiembrosPorApi(Long idSegmento) {
         String url = segmentacionUrl + "/api/v1/internal/segmentos/" + idSegmento + "/miembros";
@@ -85,11 +128,7 @@ public class SegmentoAdapter implements ISegmentoPort {
                     .retrieve()
                     .body(Long[].class);
             
-            if (ids == null) {
-                return List.of();
-            }
-            
-            return Arrays.asList(ids);
+            return ids != null ? Arrays.asList(ids) : List.of();
             
         } catch (RestClientException e) {
             log.error("  Error llamando API de miembros: {}", e.getMessage());
@@ -133,10 +172,9 @@ public class SegmentoAdapter implements ISegmentoPort {
 
     /**
      * Fallback: Consulta directa a BD usando JOIN
-     * Se usa cuando la API de segmentación no está disponible
      */
     private List<String> obtenerEmailsPorBD(Long idSegmento) {
-        log.info("  Usando fallback: consulta directa a BD");
+        log.info("  📂 Usando fallback: consulta directa a BD");
         
         try {
             String sql = """
@@ -154,36 +192,16 @@ public class SegmentoAdapter implements ISegmentoPort {
             return emails;
             
         } catch (Exception e) {
-            log.error("  Error obteniendo emails por BD: {}", e.getMessage());
+            log.error("  ✗ Error obteniendo emails por BD: {}", e.getMessage());
             throw new ExternalServiceException("Segmentacion", 
                 "No se pudieron obtener emails del segmento: " + e.getMessage());
         }
     }
 
     /**
-     * Cuenta los miembros de un segmento
+     * Cuenta miembros directamente en BD
      */
-    @Override
-    public Integer contarMiembros(Long idSegmento) {
-        try {
-            // Intentar por API (endpoint resumen)
-            String url = segmentacionUrl + "/api/v1/internal/segmentos/" + idSegmento + "/resumen";
-            
-            @SuppressWarnings("unchecked")
-            var response = restClient.get()
-                    .uri(url)
-                    .retrieve()
-                    .body(java.util.Map.class);
-            
-            if (response != null && response.containsKey("cantidadMiembros")) {
-                return (Integer) response.get("cantidadMiembros");
-            }
-            
-        } catch (Exception e) {
-            log.debug("  API de resumen no disponible, contando por BD");
-        }
-        
-        // Fallback: contar por BD
+    private Integer contarMiembrosPorBD(Long idSegmento) {
         try {
             String sql = "SELECT COUNT(*) FROM segmento_miembro WHERE id_segmento = ?";
             Integer count = jdbcTemplate.queryForObject(sql, Integer.class, idSegmento);
